Fixing signin button spacing

--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -98,3 +98,7 @@ html, body{
 #register-link{
     margin-bottom: 40px;
 }
+
+#login-submit {
+    margin-top: 10px;
+}
